--- a/src/files/README
+++ b/src/files/README
@@ -1,1 +1,7 @@
-Это мой новый блог, сделанный в системе DOCPAD
+# Новая версия старого блога построенная на [DocPad](http://docpad.org). Здесь я буду писать о разработке в среде 1с. Немного об СКД и фиксировать опыт, полученный в процессе работы с конфигуратором.
+Связаться со мной просто:
+Почта: roman.belyaev@me.com
+---
+
+## Лицензия
+Весь материал размещенный на Developer1c.ru &copy; написан мной лично, и при размещении его где то еще, ссылка на источник обязательна.
