Вторая правка ридми

--- a/src/files/README
+++ b/src/files/README
@@ -1,4 +1,6 @@
-# Новая версия старого блога построенная на [DocPad](http://docpad.org). Здесь я буду писать о разработке в среде 1с. Немного об СКД и фиксировать опыт, полученный в процессе работы с конфигуратором.
+# Новая версия старого блога построенная на [DocPad](http://docpad.org).
+
+Здесь я буду писать о разработке в среде 1с. Немного об СКД и фиксировать опыт, полученный в процессе работы с конфигуратором.
 Связаться со мной просто:
 Почта: roman.belyaev@me.com
 ---
